--- a/example/main.css
+++ b/example/main.css
@@ -9,3 +9,14 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   -webkit-font-smoothing: antialiased;
 }
+
+.example {
+  margin: 30px auto;
+  width: 800px;
+  text-align: center;
+}
+
+.example>h1 {
+  font-size: 20px;
+  font-weight: 500;
+}
