--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -17,9 +17,19 @@
 }
 
 .rtme-text-placeholder {
+  position: relative;
   height: 15px;
   /* background-color: rgba(255, 100, 0, .2); */
   cursor: text;
+}
+
+.rtme-text-placeholder::before {
+  content: "";
+  position: absolute;
+  top: -5px;
+  left: 0;
+  right: 0;
+  bottom: -5px;
 }
 
 .rtme-icon {
